Controllers y dto´s alineados a las entidades